--- a/train.html
+++ b/train.html
@@ -26,11 +26,11 @@
           <table class="table table-hover" id='employee-table'>
             <thead>
               <tr>
-                <th>Train Name</th>
-                <th>Destination</th>
-                <th>Next Arrival</th>
-                <th>Frequency (min)</th>
-                <th>Minutes away</th>
+                <th>Train Name!</th>
+                <th>Destination!</th>
+                <th>Next Arrival!</th>
+                <th>Frequency (min)!</th>
+                <th>Minutes away!</th>
               </tr>
             </thead>
             <tbody>
